@@ -513,7 +513,7 @@ public:
   /**
    * Calculates the hypergeometric discrete distribution probability mass
    * function:
-   * \f[X{\sim}H(n,p)\f]
+   * \f[X{\sim}H(N,M,n)\f]
    * \f[\Pr(X=k|N,M,n)=\frac{{M\choose k}{N-M\choose n-k}}{{N\choose n}}\f]
    *
    * \param[in] k the number of probed exact successes
@@ -531,7 +531,7 @@ public:
 
   /**
    * Calculates the hypergeometric cumulative distribution function:
-   * \f[X{\sim}H(n,p)\f]
+   * \f[X{\sim}H(N,M,n)\f]
    * \f[\Pr(X\leq k|N,M,n)=
    *   \sum_{i=0}^{k}\frac{{M\choose k}{N-M\choose n-k}}{{N\choose n}}\f]
    *
@@ -547,6 +547,22 @@ public:
                                     const HNumber & N,
                                     const HNumber & M,
                                     const HNumber & n );
+
+  /**
+   * Calculates the expected value of a hypergeometric distributed random variable:
+   * \f[X{\sim}H(N,M,n)\f]
+   * \f[E(X)=\frac{nM}{N}\f]
+   *
+   * \param[in] N the number of total elements
+   * \param[in] M the number of success elements
+   * \param[in] n the number of selected elements
+   *
+   * \return the expected value of the variable, otherwise \p NaN if the
+   * function is not defined for the specified parameter.
+   */
+  static HNumber hypergeometricMean( const HNumber & N,
+                                     const HNumber & M,
+                                     const HNumber & n );
 
   /**
    * Calculates the poissonian discrete distribution probability mass function:
